# hsnvvm

./: .gitignore  LICENSE  Setup.hs  configure  configure.ac  libnvvm.buildinfo.in  libnvvm.cabal
Foreign/: LibNVVM.hs
Foreign/LibNVVM/: Compile.chs  Compile.hs  Error.chs  Info.chs  Internal.chs  Type.chs
Test/: Simple.hs
Test/data/: HelloWorld.bc  HelloWorld.ll  HelloWorld0.bc  HelloWorld0.ll  HelloWorld1.bc  HelloWorld1.ll  HelloWorld2.bc  HelloWorld2.ll  HelloWorld3.bc  HelloWorld3.ll  HelloWorldWithError.ll
Test/llvm-gen/: HelloWorld.hs  LLVMGen.hs  datalayout.patch
Test/simple/: Simple.hs
cbits/: stubs.h
