Name:               libnvvm
Version:            1.0.0
License:            OtherLicense
License-file:       LICENSE
Author:             Sean Lee <selee@nvidia.com>
Maintainer:         Sean Lee <selee@nvidia.com>
Build-type:         Simple
Category:           Foreign
Stability:          experimental
Bug-reports:        mailto:selee@nvidia.com
Cabal-version:      >= 1.10
Tested-with:        GHC == 7.0.3
Synopsis:           FFI binding to the libNVVM, a compiler SDK component from
                    NVIDIA
Description:        TO BE WRITTEN

Library
  Exposed-modules:  Foreign.LibNVVM.Error
                    Foreign.LibNVVM.Type
                    Foreign.LibNVVM.Compile
                    Foreign.LibNVVM
  Includes:         nvvm.h
  Extra-Libraries:  nvvm
  GHC-options:      -Wall -O2 -fwarn-tabs
  Build-tools:      c2hs
  Build-depends:    base >= 4 && < 5
  Default-language: Haskell2010

Test-suite test-simple
  Type:             exitcode-stdio-1.0
  GHC-options:      -Wall -O2 -fwarn-tabs
  Build-depends:    base >= 4 && < 5,
                    libnvvm,
                    test-framework >= 0.2,
                    test-framework-hunit >= 0.2,
                    Cabal >= 1.10.1,
                    HUnit >= 1.2
  Default-language: Haskell2010
  Main-is:          Test/Simple.hs
