Name:               libnvvm
Version:            1.0.0
License:            OtherLicense
License-file:       LICENSE
Author:             Sean Lee <selee@nvidia.com>
Maintainer:         Sean Lee <selee@nvidia.com>
Build-type:         Custom
Category:           Foreign
Stability:          experimental
Bug-reports:        mailto:selee@nvidia.com
Cabal-version:      >= 1.10
Tested-with:        GHC == 7.0.3
Synopsis:           FFI binding to libNVVM, a compiler SDK component from NVIDIA
Description:        FFI binding to libNVVM, a compiler SDK component from NVIDIA

Extra-tmp-files:    libnvvm.buildinfo
                    config.status
                    config.log
                    autom4te.cache

Extra-source-files: configure
                    configure.ac
                    config.guess
                    config.sub
                    install-sh
                    libnvvm.buildinfo.in

Library
  Exposed-modules:  Foreign.LibNVVM
                    Foreign.LibNVVM.Compile
                    Foreign.LibNVVM.Error
                    Foreign.LibNVVM.Info
  Other-modules:    Foreign.LibNVVM.Internal

  Includes:         nvvm.h
  Extra-Libraries:  nvvm

  GHC-options:      -Wall -O2 -fwarn-tabs -funbox-strict-fields

  if os(darwin)
    CC-options:     -U__BLOCKS__

  Build-tools:      c2hs
  Build-depends:    base                >= 4 && < 5,
                    bytestring          >= 0.9,
                    cuda                >= 0.5

  Default-language: Haskell2010


Test-suite test-simple
  Type:             exitcode-stdio-1.0
  GHC-options:      -Wall -O2 -fwarn-tabs
  Build-depends:    base >= 4 && < 5,
                    bytestring >= 0.9,
                    libnvvm,
                    test-framework >= 0.2,
                    test-framework-hunit >= 0.2,
                    Cabal >= 1.10.1,
                    HUnit >= 1.2
  Default-language: Haskell2010
  Main-is:          Simple.hs
  hs-source-dirs:   Test/simple

Test-suite test-llvmgen
  Type:             exitcode-stdio-1.0
  GHC-options:      -Wall -O2 -fwarn-tabs
  Build-depends:    base >= 4 && < 5,
                    bytestring,
                    containers,
                    cuda >= 0.5,
                    libnvvm,
                    llvm-general == 3.2.*,
                    llvm-general-pure == 3.2.*,
                    mtl
  Default-language: Haskell2010
  Main-is:          LLVMGen.hs
  Other-modules:    HelloWorld
  hs-source-dirs:   Test/llvm-gen

